# docker-nuke

./: .travis.yml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  tox.ini
dockernuke/: __init__.py  cli.py  main.py
tests/: test_cli.py  test_main.py
