[metadata]
name = docker-nuke
author = Levi Noecker
author-email = levi.noecker@gmail.com
summary = Remove all Docker containers, images, and volumes
description-file = README.rst
home-page = https://github.com/levi-rs/docker-nuke
license = MIT
keywords = docker docker-utils
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython

[entry_points]
console_scripts =
    docker-nuke = dockernuke.main:main

[files]
packages =
    dockernuke

[wheel]
universal = 1

[flake8]
count = True
statistics = True
max-complexity = 10
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
